[project]
name = "mixlyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "pyinstaller>=6.16.0",
    "pymediainfo>=7.0.1",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.10.0",
    "pyyaml>=6.0.3",
    "resampy>=0.4.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "pip-licenses>=5.5.0",
]
